[project]
name = "thorscan"
version = "0.1.0"
description = ""
authors = [{ name = "Ursa", email = "ursa@ninerealms.co" }]
dependencies = ["tqdm>=4.66.1", "requests>=2.31.0", "retry>=0.9.2"]
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
thorscan = "thorscan:_cli"

[tool.pdm.build]
includes = ["*.py"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
